<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>ru.vzotov</groupId>
    <artifactId>accounting-model</artifactId>
    <version>2.0</version>
    <name>[Model] Accounting</name>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <junit.version>5.9.2</junit.version>
        <assertj.version>3.24.2</assertj.version>
        <commons-lang.version>3.12.0</commons-lang.version>
        <jacoco.version>0.8.10</jacoco.version>

        <graalvm.version>22.3.1</graalvm.version>
        <compiler.dir>${project.build.directory}/compiler</compiler.dir>

        <!-- Own modules -->
        <ddd.version>2.0</ddd.version>
        <money.version>2.0</money.version>
        <gov.model.version>2.0</gov.model.version>
        <loan.model.version>2.0</loan.model.version>
        <banking.model.version>2.0</banking.model.version>
        <calendar.model.version>2.0</calendar.model.version>
        <cashreceipt.model.version>2.0</cashreceipt.model.version>
        <purchases.model.version>2.0</purchases.model.version>
    </properties>

    <dependencies>
        <!--
        Internal modules
        -->
        <dependency>
            <groupId>ru.vzotov</groupId>
            <artifactId>ddd-shared</artifactId>
            <version>${ddd.version}</version>
        </dependency>

        <dependency>
            <groupId>ru.vzotov</groupId>
            <artifactId>gov-model</artifactId>
            <version>${gov.model.version}</version>
        </dependency>

        <dependency>
            <groupId>ru.vzotov</groupId>
            <artifactId>money-model</artifactId>
            <version>${money.version}</version>
        </dependency>

        <dependency>
            <groupId>ru.vzotov</groupId>
            <artifactId>loan-model</artifactId>
            <version>${loan.model.version}</version>
        </dependency>

        <dependency>
            <groupId>ru.vzotov</groupId>
            <artifactId>banking-model</artifactId>
            <version>${banking.model.version}</version>
        </dependency>

        <dependency>
            <groupId>ru.vzotov</groupId>
            <artifactId>calendar-model</artifactId>
            <version>${calendar.model.version}</version>
        </dependency>

        <dependency>
            <groupId>ru.vzotov</groupId>
            <artifactId>cashreceipt-model</artifactId>
            <version>${cashreceipt.model.version}</version>
        </dependency>

        <dependency>
            <groupId>ru.vzotov</groupId>
            <artifactId>purchases-model</artifactId>
            <version>${purchases.model.version}</version>
        </dependency>

        <!-- JS Engine-->
        <dependency>
            <groupId>org.graalvm.sdk</groupId>
            <artifactId>graal-sdk</artifactId>
            <version>${graalvm.version}</version>
        </dependency>
        <dependency>
            <groupId>org.graalvm.js</groupId>
            <artifactId>js</artifactId>
            <version>${graalvm.version}</version>
        </dependency>
        <dependency>
            <groupId>org.graalvm.js</groupId>
            <artifactId>js-scriptengine</artifactId>
            <version>${graalvm.version}</version>
        </dependency>

        <!-- Commons -->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
        </dependency>

        <!-- Testing -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-engine</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>

            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>${commons-lang.version}</version>
            </dependency>

            <dependency>
                <groupId>org.assertj</groupId>
                <artifactId>assertj-core</artifactId>
                <version>${assertj.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.2</version>
                <configuration>
                    <argLine>-XX:+UnlockExperimentalVMOptions -XX:+EnableJVMCI --module-path=${compiler.dir} --upgrade-module-path=${compiler.dir}/compiler.jar${path.separator}${compiler.dir}/compiler-management.jar</argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>2.10</version>
                <executions>
                    <execution>
                        <id>copy</id>
                        <phase>process-test-classes</phase>
                        <goals>
                            <goal>copy</goal>
                        </goals>
                        <configuration>
                            <artifactItems>
                                <artifactItem>
                                    <groupId>org.graalvm.compiler</groupId>
                                    <artifactId>compiler</artifactId>
                                    <version>${graalvm.version}</version>
                                    <type>jar</type>
                                    <overWrite>true</overWrite>
                                    <destFileName>compiler.jar</destFileName>
                                </artifactItem>
                                <artifactItem>
                                    <groupId>org.graalvm.compiler</groupId>
                                    <artifactId>compiler-management</artifactId>
                                    <version>${graalvm.version}</version>
                                    <type>jar</type>
                                    <overWrite>true</overWrite>
                                    <destFileName>compiler-management.jar</destFileName>
                                </artifactItem>
                                <artifactItem>
                                    <groupId>org.graalvm.truffle</groupId>
                                    <artifactId>truffle-api</artifactId>
                                    <version>${graalvm.version}</version>
                                    <type>jar</type>
                                    <overWrite>true</overWrite>
                                    <destFileName>truffle-api.jar</destFileName>
                                </artifactItem>
                                <artifactItem>
                                    <groupId>org.graalvm.sdk</groupId>
                                    <artifactId>graal-sdk</artifactId>
                                    <version>${graalvm.version}</version>
                                    <type>jar</type>
                                    <overWrite>true</overWrite>
                                    <destFileName>graal-sdk.jar</destFileName>
                                </artifactItem>
                            </artifactItems>
                            <outputDirectory>${compiler.dir}</outputDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <!-- Code Coverage report generation -->
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco.version}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>generate-code-coverage-report</id>
                        <phase>test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- Git flow support -->
            <plugin>
                <groupId>com.amashchenko.maven.plugin</groupId>
                <artifactId>gitflow-maven-plugin</artifactId>
                <version>1.20.0</version>
                <configuration>
                    <gitFlowConfig>
                        <productionBranch>main</productionBranch>
                        <developmentBranch>main</developmentBranch>
                    </gitFlowConfig>
                </configuration>
            </plugin>

        </plugins>
    </build>

    <distributionManagement>
        <repository>
            <id>vzotov-releases</id>
            <url>https://maven.vzotov.ru/repository/maven-everyone</url>
        </repository>
    </distributionManagement>

    <repositories>
        <repository>
            <id>vzotov-releases</id>
            <url>https://maven.vzotov.ru/repository/maven-everyone</url>
            <releases>
                <enabled>true</enabled>
                <updatePolicy>daily</updatePolicy>
                <checksumPolicy>warn</checksumPolicy>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
    </repositories>

</project>
